<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:paddingBottom="20dp">

      <TextView
          android:id="@+id/titile_login"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="24dp"
          android:text="@string/login"
          android:textColor="@color/black"
          android:textSize="30sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:ignore="MissingConstraints" />

      <EditText
          android:id="@+id/edit_email"
          android:layout_width="0dp"
          android:layout_height="45dp"
          android:layout_marginStart="16dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="16dp"
          android:hint="@string/enter_username"
          android:ems="10"
          android:inputType="textEmailAddress"
          android:paddingStart="20dp"
          android:paddingEnd="20dp"
          android:text=""
          android:textSize="14sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/titile_login"
          tools:ignore="TouchTargetSizeCheck" />

      <TextView
          android:id="@+id/username_error"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:text=""
          android:textColor="@color/error"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/edit_email" />

      <EditText
          android:id="@+id/edit_password"
          android:layout_width="0dp"
          android:layout_height="45dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:hint="@string/enter_password"
          android:inputType="textPassword"
          android:paddingStart="20dp"
          android:paddingEnd="20dp"
          android:text=""
          android:textSize="14sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/username_error"
          tools:ignore="TouchTargetSizeCheck" />

      <TextView
          android:id="@+id/password_error"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:text=""
          android:textColor="@color/error"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/edit_password" />

      <Button
          android:id="@+id/login_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="48dp"
          android:text="@string/login"
          android:textColor="@color/white"
          android:onClick="login"
          android:backgroundTint="@color/blue"
          android:textAllCaps="false"
          android:layout_marginBottom="10dp"
          android:textSize="14sp"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/password_error" />

   </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>